add deleteMessage
