# src/routes/message.routes.js
@@ -5,6 +5,7 @@ const messageController = require("../controllers/message.controller");
 
 router.get("/getAll", messageController.getAllMessages);
 router.get("/:chat_id", messageController.getMessageForChat);
-router.post("/send", messageController.sendMessage)
+router.post("/send", messageController.sendMessage);
+router.delete("/deleteMessage", messageController.deleteMessage)
 
 module.exports = router;
